--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -r requirements.txt"
-before_script: "flake8 app tests"
+install: 
+	"pip install -r requirements.txt"
+before_script: 
+	"flake8 --ignore=F403 app tests"
 # command to run tests
-script: lettuce tests
+script: 
+	# lettuce tests
+	- nosetests --with-doctest --with-coverage -s app
