--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: 
     "pip install -r requirements.txt"
 before_script: 
-    "flake8 --ignore=F403 app tests"
+    "flake8 --ignore=F403, F501 app tests"
 # command to run tests
 script: 
 # lettuce tests
